# dynamic-preambles

./: .gitignore  README.md  SigSet696_MonteCarlo1k_3.csv  SigSet696_MonteCarlo1k_4.csv  SigSet864_MonteCarlo1k_0.csv  SigSet864_MonteCarlo1k_1.csv  SigSet864_MonteCarlo1k_2.csv  SigSet864_MonteCarlo1k_3.csv  SigSet864_MonteCarlo1k_4.csv  TESTchirp_gen.py  can_test.mat  chirp.txt  chirp_gen.py  cplx_grapher.py  optimal.txt  optimization_approach1.py  optimization_attpt1.py  progress.txt  test.py  testing_scipy.py
12bit Optimization/: corr_test.py  optimal(12bit).txt  optimization-data_2024-02-03_21-09-07.npy  optimization12bit.py  optimizationV2_12bit.py  optimizationV3_MTSFM_12bit.py  optimization_analysis  optimization_analysis.py  optimization_analysis_MTSFM.py  pareto-signals_M4-N200_2023-12-20_00-10-50.txt  pareto-signals_M4-N200_2023-12-20_01-20-57.txt  pareto-signals_M6-N200_2024-02-03_20-56-32.npy  testMultiDimSaving.py
4 Signals 2023-12-12 20:37:56.442469/: Signal_4of4
4 Signals 2023-12-12 20:38:31.386776/: Signal_1of4  Signal_3of4  Signal_4of4
Archive - please don't add or remove anything from this/: chirp_gen.py  chirp_plots.py  cplx_grapher.py  optimization_attempt1_objective_functions.py  optimization_attpt1.py
GNURADIO/: Dependencies.rtf
GNURADIO/Modules/gr-UConn2402/python/UConn2402/bindings/: ArbitrarySync2_python.cc  ArbitrarySync_python.cc  CMakeLists.txt  Chirp_python.cc  CrossCorrDown_python.cc  Preamble_python.cc  fftXCorr_python.cc  python_bindings.cc
GNURADIO/Modules/gr-UConn2402/python/UConn2402/bindings/docstrings/: ArbitrarySync2_pydoc_template.h  ArbitrarySync_pydoc_template.h  Chirp_pydoc_template.h  Preamble_pydoc_template.h  fftXCorr_pydoc_template.h
(+256 files in other folders)
